--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "she-deserves-ai",
-  "version": "1.0.0",
+  "name": "she-deserves-ai-gemini",
+  "version": "2.0.0",
   "type": "module",
+  "description": "She Deserves AI Assistant - Menstrual Health & Wellness Support using Google Gemini",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": [
+    "ai",
+    "chatbot",
+    "health",
+    "wellness",
+    "gemini",
+    "menstrual-health"
+  ],
+  "author": "Brenda Kagabane",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.66.0"
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
