--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "she-deserves-ai-huggingface",
-  "version": "2.0.0",
+  "name": "she-deserves-ai-gemini",
+  "version": "2.0.0", 
   "type": "module",
-  "main": "test-server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node test-server.js",
-    "dev": "nodemon test-server.js",
-    "debug": "node test-server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
